commit for java essentials - enhancements